--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "react-simple-image-viewer": "^1.1.1",
     "sharp": "^0.30.3",
     "simplebar-react": "^2.3.6",
+    "string-strip-html": "^11.6.6",
     "stylis": "^4.1.1",
     "stylis-plugin-rtl": "^2.1.1",
     "typewriter-effect": "^2.18.2",
