--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "currency.js": "^2.0.4",
     "date-fns": "^2.25.0",
     "formik": "^2.2.9",
+    "html-react-parser": "^3.0.4",
     "merge": "^2.1.1",
     "next": "^12.2.3",
     "nprogress": "^0.2.0",
