--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "react-dom": "^17.0.2",
     "react-dropzone": "^11.4.2",
     "react-quill": "^1.3.5",
+    "react-router-dom": "^6.4.2",
     "react-scroll": "^1.8.4",
     "react-simple-image-viewer": "^1.1.1",
     "sharp": "^0.30.3",
